conf/build2020/build2020-ingress-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-build2020
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`buildbarkbetter.com`, `www.buildbarkbetter.com`)
      services:
        - name: build2020
          port: 80
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-build2020

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`buildbarkbetter.com`, `www.buildbarkbetter.com`)
      services:
        - name: build2020
          port: 80
  tls:
    certResolver: myresolver
